fix(panel): Make sure the z-index on the header doesn't apply outside of the component.

--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -19,7 +19,7 @@
 @import "../../assets/styles/header";
 
 .container {
-  @apply bg-background m-0 flex w-full flex-auto flex-col items-stretch p-0;
+  @apply relative z-default bg-background m-0 flex w-full flex-auto flex-col items-stretch p-0;
 
   transition: max-block-size var(--calcite-animation-timing), inline-size var(--calcite-animation-timing);
 }
